# WeChatPad

./: .gitignore  LICENSE  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/java/com/rarnu/dex/: DexHelper.kt
app/src/main/java/com/rarnu/wechatpad/: TAG.kt  XposedInit.kt
app/src/main/jni/: CMakeLists.txt  dex_header.h  dex_helper.cc
app/src/main/jni/dex_builder/: Android.mk  CMakeLists.txt  README.md  dex_builder.cc  dex_helper.cc  dex_helper_test.cc  dex_testcase_generator.cc
app/src/main/jni/dex_builder/include/: dex_builder.h  dex_helper.h
app/src/main/jni/dex_builder/include/slicer/: arrayview.h  chronometer.h  common.h  dex_format.h  dex_instruction_list.h  dex_utf8.h  hash_table.h  index_map.h  reader.h  scopeguard.h  sha1.h  writer.h
app/src/main/jni/dex_builder/slicer/: dex_bytecode.cc  dex_format.cc  dex_ir.cc  reader.cc  sha1.cpp  writer.cc
app/src/main/res/values/: arrays.xml  strings.xml
